--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,4 +19,10 @@
     .form-label {
         @apply text-sm text-gray-800 font-semibold;
     }
+    .table-header {
+        @apply px-4 py-2 text-sm;
+    }
+    .table-data {
+        @apply px-4 py-2 text-sm text-center;
+    }
 }
